add theme color

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" href="/favicon.ico" sizes="48x48">
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#101014" media="(prefers-color-scheme: dark)">
     <title>Where</title>
   </head>
   <body>
